--- a/assets/refs.bib
+++ b/assets/refs.bib
@@ -20,7 +20,7 @@
    number = {10-12},
    pages = {e70106},
    ISSN = {0277-6715},
-   DOI = {https://doi.org/10.1002/sim.70106},
+   DOI = {doi.org/10.1002/sim.70106},
    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.70106},
    year = {2025},
    type = {Journal Article}
