--- a/assets/refs.bib
+++ b/assets/refs.bib
@@ -1,5 +1,5 @@
 @article{oneway2024,
-   author = {\textbf{Mondal}, \textbf{Dipro} and Vanbelle, Sophie and Cassese, Alberto and Candel, Math J. J. M.},
+   author = {Mondal, Dipro and Vanbelle, Sophie and Cassese, Alberto and Candel, Math J. J. M.},
    title = {Review of sample size determination methods for the intraclass correlation coefficient in the one-way analysis of variance model},
    journal = {Statistical Methods in Medical Research},
    volume = {33},
@@ -13,7 +13,7 @@
 
 
 @article{twoway2025,
-   author = {\textbf{Mondal}, \textbf{Dipro} and Candel, Math J. J. M. and Cassese, Alberto and Vanbelle, Sophie},
+   author = {Mondal, Dipro and Candel, Math J. J. M. and Cassese, Alberto and Vanbelle, Sophie},
    title = {Confidence Intervals and Sample Size for the ICC in Two-Way ANOVA Models},
    journal = {Statistics in Medicine},
    volume = {44},
@@ -29,7 +29,7 @@
 
 @article{plos,
     doi = {10.1371/journal.pone.0245548},
-    author = {Zurlo, Enrico AND Kumar, Pravin AND Meisl, Georg AND Dear, Alexander J. AND \textbf{Mondal}, \textbf{Dipro} AND Claessens, Mireille M. A. E. AND Knowles, Tuomas P. J. AND Huber, Martina},
+    author = {Zurlo, Enrico AND Kumar, Pravin AND Meisl, Georg AND Dear, Alexander J. AND Mondal, Dipro AND Claessens, Mireille M. A. E. AND Knowles, Tuomas P. J. AND Huber, Martina},
     journal = {PLOS ONE},
     publisher = {Public Library of Science},
     title = {In situ kinetic measurements of α-synuclein aggregation reveal large population of short-lived oligomers},
@@ -44,7 +44,7 @@
 
 
 @unpublished{rev2025,
-  author    = {\textbf{Mondal}, (Under Review) \textbf{Dipro} and Cassese, Alberto and Candel, Math J. J. M. and Vanbelle, Sophie},
+  author    = {Mondal, Dipro and Cassese, Alberto and Candel, Math J. J. M. and Vanbelle, Sophie},
   title     = {Sample size determination for hypothesis testing on the intraclass correlation coefficient in a two-way analysis of variance model},
   note      = {Under review. Submitted to \textit{British Journal of Mathematical and Statistical Psychology}, Special Issue: Reliability Revisited: Advances in Reliability Measures for Psychological Research},
   year      = {2025}
